rspec-tools/tests/resources/invalid-rules/S200/apex/rule.adoc
== Why is this an issue?
== How to fix it
=== Code examples
// there's a typo, it's "Non-compliant examples"
==== Non-compliant example
==== Compliant solution
== Resources
